versioned_docs/version-4.2/client-api/changes/content/_how-to-subscribe-to-operation-changes-csharp.mdx
import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';

The following methods allow you to subscribe to operation changes:

- [ForOperationId](../../client-api/changes/how-to-subscribe-to-operation-changes.mdx#foroperation)
- [ForAllOperations](../../client-api/changes/how-to-subscribe-to-operation-changes.mdx#foralloperations)

## ForOperation

Operation changes for one operation can be observed using the `ForOperationId` method.

### Syntax

<TabItem value="operation_changes_1" label="operation_changes_1">
<CodeBlock language="csharp">
{`IChangesObservable<OperationStatusChange> ForOperationId(long operationId);
`}
</CodeBlock>
</TabItem>

| Parameters | | |
| ------------- | ------------- | ----- |
| **operationId** | long | ID of an operation for which notifications will be processed. |

| Return value | |
| ------------- | ----- |
| IChangesObservable&lt;[OperationStatusChange](../../client-api/changes/how-to-subscribe-to-operation-changes.mdx#operationchange)&gt; | Observable that allows you to add subscriptions to notifications for an operation with a given ID. |

### Example

<TabItem value="operation_changes_2" label="operation_changes_2">
<CodeBlock language="csharp">
{`IDisposable subscription = store
    .Changes(dbName, nodeTag)
    .ForOperationId(operationId)
    .Subscribe(
        change =>
        \{
            switch (change.State.Status)
            \{
                case OperationStatus.InProgress:
                    //Do Something
                    break;
                case OperationStatus.Completed:
                    //Do Something
                    break;
                case OperationStatus.Faulted:
                    //Do Something
                    break;
                case OperationStatus.Canceled:
                    //Do Something
                    break;
                default:
                    throw new ArgumentOutOfRangeException();
            \}
        \});
`}
</CodeBlock>
</TabItem>



## ForAllOperations

Operations changes for all Operations can be observed using the `ForAllOperations` method.

| Return Value | |
| ------------- | ----- |
| IChangesObservable&lt;[OperationStatusChange](../../client-api/changes/how-to-subscribe-to-operation-changes.mdx#operationchange)&gt; | Observable that allows to add subscriptions to notifications for all operations. |

### Syntax

<TabItem value="operation_changes_3" label="operation_changes_3">
<CodeBlock language="csharp">
{`IChangesObservable<OperationStatusChange> ForAllOperations();
`}
</CodeBlock>
</TabItem>

### Example

<TabItem value="operation_changes_4" label="operation_changes_4">
<CodeBlock language="csharp">
{`IDisposable subscription = store
    .Changes(dbName, nodeTag)
    .ForAllOperations()
    .Subscribe(change => Console.WriteLine("Operation #\{1\} reports progress: \{0\}", change.State.Progress.ToJson(), change.OperationId));
`}
</CodeBlock>
</TabItem>



## OperationChange

### Properties

| Name | Type | Description |
| ------------- | ------------- | ----- |
| **State** | [OperationState](../../client-api/changes/how-to-subscribe-to-operation-changes.mdx#operationstate) | Operation state |
| **OperationId** | long | Operation ID |



## OperationState

### Members

| Name | Type | Description |
| ------------- | ------------- | ----- |
| **Result** | [IOperationResult](../../client-api/changes/how-to-subscribe-to-operation-changes.mdx#operationresult) | Operation result |
| **Progress** | IOperationProgress| Instance of IOperationProgress (json representation of the progress) |
| **Status** | [OperationStatus](../../client-api/changes/how-to-subscribe-to-operation-changes.mdx#operationstatus) | Operation status |


## OperationResult

### Members

| Name | Type | Description |
| ------------- | ------------- | ----- |
| **Message** | string | Operation message |
| **ShouldPersist** | bool | determine whether or not the result should be saved in the storage |


## OperationStatus

# OperationStatus (enum)

| Name | Description |
| ---- | ----- |
| **InProgress** | `Indicates that the operation made progress` |
| **Completed** | `Indicates that the operation has completed` |
| **Faulted** | `Indicates that the operation is faulted` |
| **Canceled** | `Indicates that the operation has been Canceled` |


## Remarks

<Admonition type="warning" title="">
To get more method overloads, especially ones supporting **delegates**, please add the 
[System.Reactive.Core](https://www.nuget.org/packages/System.Reactive.Core/) package to your project.  
</Admonition>


