versioned_docs/version-7.1/client-api/changes/content/_how-to-subscribe-to-operation-changes-csharp.mdx
import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import Panel from "@site/src/components/Panel";
import ContentFrame from "@site/src/components/ContentFrame";

<Admonition type="note" title="">

Subscribe to operation changes using `ForOperationId` or `ForAllOperations`.

<Admonition type="warning" title="">
The `Subscribe` method on the observable these methods return accepts only an `IObserver` object
by default.  
To instead subscribe with a delegate, like the `change => ...` lambda used in the examples below,
add the [System.Reactive](https://www.nuget.org/packages/System.Reactive/) package to your project.  
This adds `Subscribe` overloads that take delegates, including ones with error and
completion handlers.  
</Admonition>

* In this article:
   * [ForOperationId](../../../client-api/changes/how-to-subscribe-to-operation-changes.mdx#foroperationid)
   * [ForAllOperations](../../../client-api/changes/how-to-subscribe-to-operation-changes.mdx#foralloperations)
   * [Syntax](../../../client-api/changes/how-to-subscribe-to-operation-changes.mdx#syntax)

</Admonition>

<Panel heading="ForOperationId">

Operation changes for one operation can be observed using the `ForOperationId` method.

<Admonition type="note" title="">
Please note that from RavenDB 6.2 on, operation changes can be tracked only on a **specific node**.  
The purpose of this change is to improve results consistency, as an operation may behave very differently
on different nodes and cross-cluster tracking of an operation may become confusing and ineffective if
the operation fails over from one node to another.  
Tracking operations will therefore be possible only if the `Changes` API was
[opened](../../../client-api/changes/what-is-changes-api.mdx#accessing-changes-api) using a method that limits
tracking to a single node: `store.Changes(dbName, nodeTag)`  
</Admonition>

<ContentFrame>

### ForOperationId syntax

```csharp
IChangesObservable<OperationStatusChange> ForOperationId(long operationId);
```
<br />

| Parameters | | |
| ------------- | ------------- | ----- |
| **operationId** | long | ID of an operation for which notifications will be processed. |

| Return Value | |
| ------------- | ----- |
| IChangesObservable&lt;[OperationStatusChange](../../../client-api/changes/how-to-subscribe-to-operation-changes.mdx#syntax)&gt; | Observable that allows you to add subscriptions to notifications for an operation with a given ID. |

</ContentFrame>
<ContentFrame>

### Example

```csharp
IDisposable subscription = store
    .Changes(dbName, nodeTag)
    .ForOperationId(operationId)
    .Subscribe(
        change =>
        {
            switch (change.State.Status)
            {
                case OperationStatus.InProgress:
                    //Do Something
                    break;
                case OperationStatus.Completed:
                    //Do Something
                    break;
                case OperationStatus.Faulted:
                    //Do Something
                    break;
                case OperationStatus.Canceled:
                    //Do Something
                    break;
                default:
                    throw new ArgumentOutOfRangeException();
            }
        });
```

</ContentFrame>

</Panel>

<Panel heading="ForAllOperations">

Operations changes for all Operations can be observed using the `ForAllOperations` method.

<Admonition type="note" title="">
Please note that from RavenDB 6.2 on, operation changes can be tracked only on a **specific node**.  
The purpose of this change is to improve results consistency, as an operation may behave very differently
on different nodes and cross-cluster tracking of an operation may become confusing and ineffective if
the operation fails over from one node to another.  
Tracking operations will therefore be possible only if the `Changes` API was
[opened](../../../client-api/changes/what-is-changes-api.mdx#accessing-changes-api) using a method that limits
tracking to a single node: `store.Changes(dbName, nodeTag)`  
</Admonition>

<ContentFrame>

### ForAllOperations syntax

```csharp
IChangesObservable<OperationStatusChange> ForAllOperations();
```
<br />

| Return Value | |
| ------------- | ----- |
| IChangesObservable&lt;[OperationStatusChange](../../../client-api/changes/how-to-subscribe-to-operation-changes.mdx#syntax)&gt; | Observable that allows to add subscriptions to notifications for all operations. |

</ContentFrame>
<ContentFrame>

### Example

```csharp
IDisposable subscription = store
    .Changes(dbName, nodeTag)
    .ForAllOperations()
    .Subscribe(change => Console.WriteLine("Operation #{1} reports progress: {0}", change.State.Progress.ToJson(), change.OperationId));
```

</ContentFrame>

</Panel>

<Panel heading="Syntax">

<Tabs>
<TabItem value="OperationStatusChange" label="OperationStatusChange">

**The notification object delivered to subscribers when an operation changes.**

```csharp
class OperationStatusChange
{
    long OperationId
    OperationState State
}
```
<br />

| Property | Type | Description |
| ------------- | ------------- | ----- |
| **OperationId** | long | Operation ID |
| **State** | [OperationState](../../../client-api/changes/how-to-subscribe-to-operation-changes.mdx#syntax) | Operation state |

</TabItem>
<TabItem value="OperationState" label="OperationState">

```csharp
class OperationState
{
    IOperationResult Result
    IOperationProgress Progress
    OperationStatus Status
}
```
<br />

| Property | Type | Description |
| ------------- | ------------- | ----- |
| **Result** | [IOperationResult](../../../client-api/changes/how-to-subscribe-to-operation-changes.mdx#syntax) | Operation result |
| **Progress** | IOperationProgress | Instance of IOperationProgress (json representation of the progress) |
| **Status** | [OperationStatus](../../../client-api/changes/how-to-subscribe-to-operation-changes.mdx#syntax) | Operation status |

</TabItem>
</Tabs>

<Tabs>
<TabItem value="IOperationResult" label="IOperationResult">

```csharp
interface IOperationResult
{
    string Message
    bool ShouldPersist
    bool CanMerge
}
```
<br />

| Property | Type | Description |
| ------------- | ------------- | ----- |
| **Message** | string | Operation message |
| **ShouldPersist** | bool | determine whether or not the result should be saved in the storage |
| **CanMerge** | bool | Whether this result can be merged with another operation result |

</TabItem>
<TabItem value="OperationStatus" label="OperationStatus">

```csharp
enum OperationStatus
{
    InProgress,
    Completed,
    Faulted,
    Canceled,
}
```
<br />

| Name | Description |
| ---- | ----- |
| **InProgress** | `Indicates that the operation made progress` |
| **Completed** | `Indicates that the operation has completed` |
| **Faulted** | `Indicates that the operation is faulted` |
| **Canceled** | `Indicates that the operation has been Canceled` |

</TabItem>
</Tabs>

</Panel>
